--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "description": "",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^3.19.0",
     "eslint-config-lighthouselabs": "lighthouse-labs/eslint-config-lighthouselabs"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
